test/corpus/expressions.txt
================================================================================
function calls
================================================================================

self()
hd([a])
tl([a])
maps:get(date,DateTime)
(fun (X) -> X end)(1).
%% believe it or not this is valid:
fun () -> X end().
?line X = 2.

--------------------------------------------------------------------------------

(source
  (call
    (atom)
    (arguments))
  (call
    (atom)
    (arguments
      (list
        (atom))))
  (call
    (atom)
    (arguments
      (list
        (atom))))
  (call
    (atom)
    (atom)
    (arguments
      (atom)
      (variable)))
  (call
    (anonymous_function
      (stab_clause
        (arguments
          (variable))
        (variable)))
    (arguments
      (integer)))
  (comment)
  (call
    (anonymous_function
      (stab_clause
        (arguments)
        (variable)))
    (arguments))
  (macro
    (atom))
  (binary_operator
    (variable)
    (integer)))

================================================================================
blocks
================================================================================

begin
  _ = 1 + 1,
  _ = 2 + 2
end

--------------------------------------------------------------------------------

(source
  (block
    (binary_operator
      (variable)
      (binary_operator
        (integer)
        (integer)))
    (binary_operator
      (variable)
      (binary_operator
        (integer)
        (integer)))))

================================================================================
comprehensions
================================================================================

%% Comprehensions are parsed very simply by treating '||' as a (right-assoc)
%% binary operator.
%% We could structure this rule more and make syntax assertions about the
%% generator(s) and qualifier(s) but I don't really see a point.
[ X * 2 || X <- [1, 2, 3]]
<< << (X * 2) >> || << X >> <= << 1, 2, 3 >> >>

--------------------------------------------------------------------------------

(source
  (comment)
  (comment)
  (comment)
  (comment)
  (list
    (binary_operator
      (binary_operator
        (binary_operator
          (variable)
          (integer))
        (variable))
      (list
        (integer)
        (integer)
        (integer))))
  (bitstring
    (binary_operator
      (binary_operator
        (bitstring
          (binary_operator
            (variable)
            (integer)))
        (bitstring
          (variable)))
      (bitstring
        (integer)
        (integer)
        (integer)))))

================================================================================
if
================================================================================

if
  X > Y -> X;
  X =< Y -> Y
end.

if X =:= ok; Y =:= ok -> ok; true -> error end.

--------------------------------------------------------------------------------

(source
  (if
    (clause
      (guard
        (binary_operator
          (variable)
          (variable)))
      (variable))
    (clause
      (guard
        (binary_operator
          (variable)
          (variable)))
      (variable)))
  (if
    (clause
      (guard
        (binary_operator
          (variable)
          (atom))
        (binary_operator
          (variable)
          (atom)))
      (atom))
    (clause
      (guard
        (atom))
      (atom))))

================================================================================
case
================================================================================

case Var of
  {ok, X} when is_integer(X) -> X;
  {error, Reason} -> {error, Reason}
end

--------------------------------------------------------------------------------

(source
  (case
    (variable)
    (clause
      (binary_operator
        (tuple
          (atom)
          (variable))
        (call
          (atom)
          (arguments
            (variable))))
      (variable))
    (clause
      (tuple
        (atom)
        (variable))
      (tuple
        (atom)
        (variable)))))

================================================================================
receive
================================================================================

receive
  ok ->
    ok;
  timeout ->
    error
end.

receive
  ok ->
    ok
after
  5_000 -> error
end.

receive
after
  0 -> ok
end.

--------------------------------------------------------------------------------

(source
  (receive
    (clause
      (atom)
      (atom))
    (clause
      (atom)
      (atom)))
  (receive
    (clause
      (atom)
      (atom))
    (after
      (integer)
      (atom)))
  (receive
    (after
      (integer)
      (atom))))

================================================================================
try
================================================================================

try Expr
catch
  Pattern when Guard -> ok
end.

try Expr of
  Pattern when Guard -> ok
after
  error
end.

try
  Expr,
  Expr1
of
  Pattern when Guard -> ok
end.

try Expr
catch
  throw:Thrown -> Thrown;
  exit:_Reason -> exit;
  error:{error,Reason}:Stacktrace -> Stacktrace
end.

try Expr of
  _ -> ?MACRO
catch
  _:_ -> erlang:error(badarg)
end.

--------------------------------------------------------------------------------

(source
  (try
    (variable)
    (clause
      (binary_operator
        (variable)
        (variable))
      (atom)))
  (try
    (variable)
    (clause
      (binary_operator
        (variable)
        (variable))
      (atom))
    (after)
    (after
      (atom)))
  (try
    (body
      (variable)
      (variable))
    (clause
      (binary_operator
        (variable)
        (variable))
      (atom)))
  (try
    (variable)
    (clause
      (binary_operator
        (atom)
        (variable))
      (variable))
    (clause
      (binary_operator
        (atom)
        (variable))
      (atom))
    (clause
      (binary_operator
        (binary_operator
          (atom)
          (tuple
            (atom)
            (variable)))
        (variable))
      (variable)))
  (try
    (variable)
    (clause
      (variable)
      (macro
        (variable)))
    (clause
      (binary_operator
        (variable)
        (variable))
      (call
        (atom)
        (atom)
        (arguments
          (atom))))))

================================================================================
unary operators
================================================================================

-1,
-2.3e-3,
not true,
-1 + 2,
2 + -1,
false or not true,
catch throw(bye).

--------------------------------------------------------------------------------

(source
  (unary_operator
    (integer))
  (unary_operator
    (float))
  (unary_operator
    (atom))
  (binary_operator
    (unary_operator
      (integer))
    (integer))
  (binary_operator
    (integer)
    (unary_operator
      (integer)))
  (binary_operator
    (atom)
    (unary_operator
      (atom)))
  (unary_operator
    (call
      (atom)
      (arguments
        (atom)))))

================================================================================
macros
================================================================================

?MODULE,
#?MODULE{},
?assertMatch({foo, N} when N > 0, {foo, 1}),
?MIN(2, 3).

--------------------------------------------------------------------------------

(source
  (macro
    (variable))
  (record
    (macro
      (variable)))
  (macro
    (atom)
    (arguments
      (binary_operator
        (tuple
          (atom)
          (variable))
        (binary_operator
          (variable)
          (integer)))
      (tuple
        (atom)
        (integer))))
  (macro
    (variable)
    (arguments
      (integer)
      (integer))))
